# minimal-agent

./: .gitignore  README.md
cli/: __init__.py  app.py  main.py  pyproject.toml  render.py  repl.py
example/: README.md
example/server/: app.py  main.py  pyproject.toml  schemas.py
example/server/agents/: __init__.py  base.py
example/server/agents/research/: agent.py
example/server/agents/swe/: agent.py
example/server/routes/: agents.py  chat.py  sessions.py  tools.py
minimal_agent/: .env.example  CLAUDE.md  Makefile  README.md  config.py  main.py  pyproject.toml
minimal_agent/.claude/skills/code-review/: SKILL.md
minimal_agent/.claude/skills/explain/: SKILL.md
minimal_agent/agent/: __init__.py  agent.py  context.py  message_store.py  session.py
minimal_agent/cli/: app.py  render.py  repl.py
minimal_agent/llm/: __init__.py  llm.py  types.py
minimal_agent/src/minimal_agent/: __init__.py  config.py
minimal_agent/src/minimal_agent/agent/: agent.py  context.py  message_store.py  session.py
minimal_agent/src/minimal_agent/llm/: __init__.py  llm.py  types.py
minimal_agent/src/minimal_agent/skills/: __init__.py  discovery.py  errors.py
minimal_agent/src/minimal_agent/system_prompt/: __init__.py  context_sources.py  env.py
minimal_agent/src/minimal_agent/tools/: __init__.py  base.py  context.py  dispatcher.py
minimal_agent/system_prompt/: builder.py  context_sources.py
minimal_agent/tests/agent/: test_agent.py  test_agent_skills.py  test_context.py  test_message_store.py  test_session.py
minimal_agent/tests/llm/: test_request_building.py  test_response_parsing.py  test_stream_accumulator.py  test_tool_from_model.py
minimal_agent/tests/skills/: test_discovery.py
minimal_agent/tests/system_prompt/: test_builder.py  test_context_sources.py  test_env.py
minimal_agent/tests/tools/: test_dispatcher.py
minimal_agent/tools/: base.py  context.py  dispatcher.py  results.py
(+108 files in other folders)
