[project]
name = "minimal-agent-cli"
version = "0.1.0"
description = "Terminal CLI for the minimal-agent framework"
requires-python = ">=3.11"
dependencies = [
    "minimal-agent",
    "prompt-toolkit>=3.0.52",
    "rich>=14.3.3",
]

[tool.uv.sources]
minimal-agent = { path = "../minimal_agent", editable = true }
