[project]
name = "minimal-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=2.30.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "ruff>=0.15.9",
]

[tool.ruff.lint]
# Enable flake8-bugbear (`B`) rules, pycodestyle (`E`/`W`), isort (`I`), and more
select = ["E", "F", "B", "I", "W"]
ignore = ["B008"]
# Avoid auto-fixing these errors
unfixable = []
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".ruff_cache",
    "__pypackages__",
    "dist",
    "venv",
    ".venv",
    "build",
    "node_modules",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
